--- a/app/src/main/res/layout/order_item.xml
+++ b/app/src/main/res/layout/order_item.xml
@@ -3,16 +3,20 @@
 
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    card_view:cardCornerRadius="0dp"
+    android:layout_marginTop="15dp"
+    card_view:cardBackgroundColor="@color/colorCardBackground">
 
     <LinearLayout
-        android:layout_margin="@dimen/order_item_layout_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:foreground="?android:attr/selectableItemBackground"
         android:orientation="vertical">
 
         <TextView
+            android:layout_marginTop="@dimen/order_item_layout_margin"
             android:id="@+id/order_date_text_view"
             tools:text="22/10/2016"
             android:gravity="center"
@@ -23,6 +27,7 @@
             android:layout_height="0dp" />
 
         <LinearLayout
+            android:layout_margin="@dimen/order_item_layout_margin"
             android:paddingTop="5dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -34,7 +39,7 @@
                 android:paddingEnd="5dp"
                 android:paddingStart="5dp"
                 tools:text="MOW - IEV"
-                android:gravity="center_vertical|end"
+                android:gravity="center"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -46,7 +51,7 @@
                 android:paddingEnd="5dp"
                 android:paddingStart="5dp"
                 tools:text="S7 - 495"
-                android:gravity="center_vertical|start"
+                android:gravity="center"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -56,9 +61,13 @@
 
         <LinearLayout
             android:layout_marginTop="@dimen/order_item_layout_margin"
+            android:paddingLeft="@dimen/order_item_layout_margin"
+            android:paddingRight="@dimen/order_item_layout_margin"
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:background="@color/colorAccent"
+            android:layout_height="match_parent"
+            android:minHeight="@dimen/order_item_bottom_line_min_height">
 
             <TextView
                 android:id="@+id/order_flight_takeoff_time_text_view"
@@ -73,6 +82,12 @@
 
             <TextView
                 android:id="@+id/order_flight_duration_time_text_view"
+                android:drawableStart="@drawable/ic_hourglass_empty_black"
+                android:drawableLeft="@drawable/ic_hourglass_empty_black"
+                android:paddingLeft="20dp"
+                android:paddingStart="20dp"
+                android:paddingRight="5dp"
+                android:paddingEnd="5dp"
                 tools:text="2:40"
                 android:gravity="center"
                 android:textStyle="bold"
