--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="order_item_text_drawable_padding">10dp</dimen>
     <dimen name="order_item_layout_margin">10dp</dimen>
+    <dimen name="order_item_bottom_line_min_height">50dp</dimen>
 </resources>
