--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -1,6 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <TextView
+        android:id="@+id/no_data_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="@string/orders_recyclerview_no_data_message_text"
+        android:textSize="@dimen/text_size_normal"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/orders_recycler_view"
         android:layout_width="match_parent"
