--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="order_item_text_drawable_padding">10dp</dimen>
     <dimen name="order_item_layout_margin">10dp</dimen>
     <dimen name="order_item_bottom_line_min_height">50dp</dimen>
+    <dimen name="text_size_normal">24sp</dimen>
 </resources>
